--- a/.github/workflows/tweetRelease.yml
+++ b/.github/workflows/tweetRelease.yml
@@ -25,7 +25,7 @@ jobs:
           echo ${{ steps.fetch-latest-release.outputs.release }}
       - uses: ethomson/send-tweet-action@v1
         with:
-          status: "New Monocle Release: https://github.com/johnpierson/RhythmForDynamo/releases/tag/${{ steps.fetch-latest-release.outputs.release }}" 
+          status: "New Rhythm for #DynamoBIM Release: https://github.com/johnpierson/RhythmForDynamo/releases/tag/${{ steps.fetch-latest-release.outputs.release }}" 
           consumer-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
           consumer-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
           access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
